# easyenv

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
Casks/: easyenv.rb
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
