[package]
name = "easyenv"
version = "0.1.0"
description = "A local-first GUI to browse and edit .env files across all your projects"
edition = "2021"
license = "MIT"
repository = "https://github.com/kei155/easyenv"

[lib]
name = "easyenv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
